# universal-ci-noti

./: .gitignore  .travis.yml  README.md  configure_venv.bat  pytest.bat  pytest.ini  python.bat  requirements-test.txt  requirements.txt  settings.ini  setup.cfg  tox.ini
.githooks/: pre-commit
docs/source/: index.rst
docs/source/api-docs/: api-docs-index.rst
example/: basic_bot.py
hooks/: pre-commit
src/: start_bot.py
src/common/: __init__.py  arg_parser.py  fs.py  logger.py  process.py  project.py  test_utils.py  utils.py
src/messenger/: __init__.py
src/messenger/slack_impl/: client.py  formatter.py  helper.py
src/noti/: runtime.py  types.py
src/noti/consumer/: __init__.py
src/noti/consumer/impl/: __init__.py  messenger.py
src/noti/producer/: __init__.py
src/noti/producer/impl/: __init__.py  web.py
src/noti/queue/: __init__.py
src/noti/queue/impl/: __init__.py  simple.py
src/tests/test_noti/: test_types.py
src/universal_ci_noti/: test_utils.py  utils.py
src/universal_ci_noti/messenger/: __init__.py  formatter.py
src/universal_ci_noti/messenger/impl/: __init__.py
src/universal_ci_noti/messenger/slack_impl/: client.py  formatter.py
src/universal_ci_noti/noti/: test_types.py  types.py
src/universal_ci_noti/noti/consumer/: __init__.py
src/universal_ci_noti/noti/producer/: __init__.py
src/universal_ci_noti/noti/queue/: __init__.py
src/universal_ci_noti/noti/runtime/: __init__.py  exiter.py  runtime.py
src/universal_ci_noti/vcs/: __init__.py  repo.py  vcs.py
src/universal_ci_noti/web_server/: __init__.py
(+37 files in other folders)
