[metadata]
name = universal-ci-noti
version = 0.0.1
author = Oleg Strokachuk
author_email = zifter.ai@gmail.com
home-page = https://github.com/zifter/universal-ci-noti
description = attr: universal_ci_noti.__doc__
long-description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license-file = LICENSE
platform = any
keywords = ci, chat
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir =
    universal_ci_noti=src/universal_ci_noti
packages =
    universal_ci_noti
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
    slackclient==2.5.0
    python-telegram-bot==12.4.2
    cached-property==1.5.1
    aioify==0.3.2
    aiohttp
    dataclasses-json

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
